--- a/styles/pages/home/home-search.module.css
+++ b/styles/pages/home/home-search.module.css
@@ -62,7 +62,7 @@
 }
 
 .search_button {
-  background-color: #f3941e;
+  background-color: #222222;
   color: white;
   font-size: 15px;
   width: 20%;
