--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,9 @@
   font-family: myFirstFont;
   /* src: url("../public/fonts/GT-Eesti-Display-Regular.otf"); */
   src: url("../public/fonts/SFPRODISPLAYREGULAR.otf");
+
 }
+/* cosole */
 html,
 body {
   overflow-y: auto;
