--- a/styles/pages/tour/tour-components/tour-details/overview-highlites-places.module.css
+++ b/styles/pages/tour/tour-components/tour-details/overview-highlites-places.module.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 }
 @media screen and (max-width: 1000px) {
   .container {
