--- a/styles/pages/tour/tour-components/tour-details/overview-highlites-places.module.css
+++ b/styles/pages/tour/tour-components/tour-details/overview-highlites-places.module.css
@@ -21,7 +21,7 @@
 }
 .container_highlits {
   width: 100%;
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
