--- a/styles/pages/tour/tour-components/slider-and-book-form/book-form.module.css
+++ b/styles/pages/tour/tour-components/slider-and-book-form/book-form.module.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
   row-gap: 20px;
 }
 .container_search {
