--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,5 +12,6 @@ html,
 body {
   overflow-y: auto;
   /* font-family: myFirstFont, sans-serif; */
-  font-family: myFirstFont;
+  /* font-family: myFirstFont; */
+  font-family: "Inter Tight", sans-serif;
 }
