--- a/styles/pages/tours/tours-card.module.css
+++ b/styles/pages/tours/tours-card.module.css
@@ -3,7 +3,7 @@
   min-height: 350px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.038) 0px 4px 12px;
+  /* box-shadow: rgba(0, 0, 0, 0.038) 0px 4px 12px; */
   cursor: pointer;
   margin: 0 1%;
   margin-top: 2%;
@@ -15,7 +15,7 @@
   /* height: 200px; */
   width: 100%;
   aspect-ratio: 1.5 / 1;
-  border-radius: 5px 5px 0 0;
+  border-radius: 10px;
   background-size: cover;
   background-position: center;
   position: relative;
