--- a/styles/modals/auth/sign-up.module.css
+++ b/styles/modals/auth/sign-up.module.css
@@ -114,3 +114,17 @@
   right: 20px;
   top: 20px;
 }
+@media screen and (max-width: 600px) {
+  .div_form {
+    flex-basis: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+  }
+  .form_sing_up {
+    width: 100%;
+  }
+}
